# Flaps_and_Speed_Display

./: CMakeLists.txt  README.md  fix_lvgl_include.py  idf_component.yml  partitions.csv  patch_lvgl_adapter.py  platformio.ini  pre_fix_include_order.py  sdkconfig.defaults  sdkconfig.esp32-s3-flaps  sdkconfig.esp32-s3-zero
boards/: esp32-s3-fh4r2.json
doc/: BOM.md  Display-L(Vario)_CAN_output.md  Usermanual.md  toPDF.py  toRound.py
extra_scripts/: cc_wrap.py  fix_bad_include.py  fix_include_flag.py  post_fix_lvgl_include.py
housing/: 57mm Instrument Flaps&Speed - Part 1.stl  57mm Instrument Flaps&Speed - Part 2.stl  57mm Instrument Flaps&Speed - Part 3.stl
include/: display.hpp  lv_conf.h
spiffs_data/: flapDescriptor.json  ventus3Polar.json  ventus3_3T_SE.json  ventus3_defaut-COMPACT.json  ventus3_defaut.json  ventus3_test.json
src/: CMakeLists.txt  ble_ota.cpp  ble_ota.hpp  can_decoder.hpp  display.cpp  display.hpp  flaputils.cpp  flaputils.hpp  flight_data.hpp  idf_component.yml  lvgl_src  main.cpp  native_fonts.c
src/platform/: native_font_mono_digits_120.c  native_fonts.c  ui_platform.cpp  ui_platform.hpp
src/ui/: ui.cpp  ui.h  ui_helpers.hpp
src/ui/screens/: display.cpp  screen1.cpp  screen1.hpp  screen2.cpp  screen2.hpp  screen3.cpp  screen3.hpp  screen4.cpp  screen4.hpp  screen5.cpp  screen5.hpp  screen6.cpp  screen6.hpp  screen7.cpp  screen7.hpp
support/: get_git_rev.py
test/: BLE_OTA_SEND.md  PLAY_CANLOG.md  PLAY_CONLOG.md  README.md  SIMULATOR.md  SPEED2FLAPS_TEST.md  SPEED_INTERPOLATOR.md  WindVector.py  ble_ota_send.py  play_canlog.py  (+4 more)
(+10 files in other folders)
