idf_component_register(
        SRCS
        "main.cpp"
        "ui/ui.cpp"
        "ui/screens/screen1.cpp"
        "ui/screens/screen2.cpp"
        "ui/screens/screen3.cpp"
        "flaputils.cpp"
        "../components/ui/fonts/digits_96.c"
        INCLUDE_DIRS
        "."
        "../include"
)
