idf_component_register(
        SRCS
        "main.cpp"
        "ble_ota.cpp"
        "ui/ui.cpp"
        "ui/screens/screen1.cpp"
        "ui/screens/screen2.cpp"
        "ui/screens/screen3.cpp"
        "ui/screens/screen4.cpp"
        "flaputils.cpp"
        "../components/ui/fonts/digits_80.c"
        "../components/ui/fonts/digits_96.c"
        "../components/ui/fonts/digits_120.c"
        INCLUDE_DIRS
        "."
        "../include"
)
